--- a/css/loader.css
+++ b/css/loader.css
@@ -82,8 +82,7 @@ video {
   top:100px;
   margin-left: 400px;
   perspective: 1000px;
-  position: absolute ;
-  z-index: 1; 
+  position: absolute;
 }
 .thumb a {
   display: block;
@@ -94,9 +93,9 @@ video {
   /*double layered BG for lighting effect*/
   background: 
     linear-gradient(rgba(0, 0, 0 ,0.4), rgba(0, 0, 0, 0.4)), 
-    url("images/fpage.jpg");
+    url("../images/fpage.jpg");
   /*disabling the translucent black bg on the main image*/
-  background-size: 0, cover;
+  background-size: 0,cover;
   /*3d space for children*/
   transform-style: preserve-3d;
   transition: all 0.5s;
