--- a/css/loader.css
+++ b/css/loader.css
@@ -36,8 +36,8 @@ body{
 #myDiv {
   display: none;
 }
-video { 
-  -webkit-transform: scaleX(1); 
+video {
+  -webkit-transform: scaleX(1);
   -moz-transform: scaleX(1);
 }
 
@@ -92,8 +92,8 @@ video {
   width: 800px;
   height: 420px;
   /*double layered BG for lighting effect*/
-  background: 
-    linear-gradient(rgba(0, 0, 0 ,0.4), rgba(0, 0, 0, 0.4)), 
+  background:
+    linear-gradient(rgba(0, 0, 0 ,0.4), rgba(0, 0, 0, 0.4)),
     url("../images/fpage1.png");
   /*disabling the translucent black bg on the main image*/
   background-size: 0,cover;
@@ -105,7 +105,7 @@ video {
 /*bottom surface */
 .thumb a:after {
   /*36px high element positioned at the bottom of the image*/
-  content: ''; position: absolute; left: 0; bottom: 0; 
+  content: ''; position: absolute; left: 0; bottom: 0;
   width: 100%; height: 36px;
   /*inherit the main BG*/
   background:inherit; background-size: cover, cover;
@@ -128,9 +128,9 @@ video {
 .thumb a:before {
   content: ''; position: absolute; top: 0; left: 0;
   width: 100%; height: 100%;
-  background: rgba(0, 0, 0, 0.5); 
+  background: rgba(0, 0, 0, 0.5);
   box-shadow: 0 0 100px 50px rgba(0, 0, 0, 0.5);
-  transition: all 0.5s; 
+  transition: all 0.5s;
   /*by default the shadow will be almost flat, very transparent, scaled down with a large blur*/
   opacity: 0.15;
   transform: rotateX(95deg) translateZ(-80px) scale(0.75);
@@ -149,8 +149,8 @@ video {
 
 
 /* Hide scrollbar from page */
-::-webkit-scrollbar { 
-    display: none; 
+::-webkit-scrollbar {
+    display: none;
 }
 
 
@@ -164,8 +164,37 @@ video {
 #bannner{
 
 }
-#banner p{
+#banner span{
   font-family: gothic;
   text-align: center;
-  font-size: 300px;
+  font-size: 100px;
+}
+.iam{
+  padding-right: 100px;
+}
+
+
+
+
+
+.typed-cursor{
+    opacity: 1;
+    -webkit-animation: blink 0.7s infinite;
+    -moz-animation: blink 0.7s infinite;
+    animation: blink 0.7s infinite;
+}
+@keyframes blink{
+    0% { opacity:1; }
+    50% { opacity:0; }
+    100% { opacity:1; }
+}
+@-webkit-keyframes blink{
+    0% { opacity:1; }
+    50% { opacity:0; }
+    100% { opacity:1; }
+}
+@-moz-keyframes blink{
+    0% { opacity:1; }
+    50% { opacity:0; }
+    100% { opacity:1; }
 }
