--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,4 +1,4 @@
-/* -------------------------------- 
+/* --------------------------------
 
 Primary style
 
@@ -20,9 +20,9 @@ a {
   text-decoration: none;
 }
 
-/* -------------------------------- 
+/* --------------------------------
 
-Main Components 
+Main Components
 
 -------------------------------- */
 .cd-header {
@@ -89,7 +89,7 @@ Main Components
   position: absolute;
   width: 28px;
   height: 3px;
-  background-color: #000;
+  background-color: #fff;
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
 }
