--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -1,37 +1,22 @@
 body {
-  background: #009688;
-  color: white;
-  text-align: center;
+  background: #2A2927;
+  color: #FCCF0D;
 }
 
-a {
-  color: inherit;
-}
-
-h1, h2, h3, h4 {
-  margin: 0;
-  margin-bottom: 10px;
-  margin-top: 10px;
-}
-
-h1 {
-  font-size: 3em;
-}
-
-.menu {
+.menu {  
   -webkit-filter: url("#shadowed-goo");
           filter: url("#shadowed-goo");
 }
 
 .menu-item, .menu-open-button {
-  background: #FFF59D;
+  background: #EBF2EA;
   border-radius: 100%;
   width: 80px;
   height: 80px;
   margin-left: -40px;
   position: absolute;
   top: 20px;
-  color: black;
+  color: #C1403D;
   text-align: center;
   line-height: 80px;
   -webkit-transform: translate3d(0, 0, 0);
@@ -49,7 +34,7 @@ h1 {
 .hamburger {
   width: 25px;
   height: 3px;
-  background: black;
+  background: #C1403D;
   display: block;
   position: absolute;
   top: 50%;
@@ -105,8 +90,8 @@ h1 {
 }
 
 .menu-item:hover {
-  background: #212121;
-  color: #2196F3;
+  background: #16235A;
+  color: #F2EAED;
 }
 .menu-item:nth-child(3) {
   -webkit-transition-duration: 180ms;
