--- a/public/css/loader.css
+++ b/public/css/loader.css
@@ -1,275 +1,174 @@
-body{
-  margin:0px;
-  line-height: 1;
-  background-color: #2196F3;
-}
-#myDiv{
-  display: none;
-}
-#mylogo{
-  width: 420px;
-  height: 420px;
-  position: absolute;
-  display: block;
-}
-#left{
+#load {
   position:absolute;
-  float:left;
-  width: 50%;
-}
-#right{
-  position: absolute;
-  margin-left:50%;
-  width: 50%;
-}
-/*loader */
-#loader {
-  position: absolute;
-  display: block;
-  background-color: white;
-  width: 1366px;
-  height: 650px;
-}
-#video_box {
-  position:relative;
-  size: cover;
-}
-video {
-  -webkit-transform: scaleX(1);
-  -moz-transform: scaleX(1);
+  width:600px;
+  height:36px;
+  left:50%;
+  top:40%;
+  margin-left:-300px;
+  overflow:visible;
+  -webkit-user-select:none;
+  -moz-user-select:none;
+  -ms-user-select:none;
+  user-select:none;
+  cursor:default;
 }
 
-.progress-line, .progress-line:before {
-  height: 3px;
-  width: 100%;
-  margin: 0;
-}
-.progress-line {
-  background-color: #F44336;
-  display: -webkit-flex;
-  display: flex;
-}
-.progress-line:before {
-  background-color: #FFFFFF;
-  content: '';
-  -webkit-animation: running-progress 2s cubic-bezier(0.4, 0, 0.2, 1) infinite;
-  animation: running-progress 2s cubic-bezier(0.4, 0, 0.2, 1) infinite;
-}
-@-webkit-keyframes running-progress {
-  0% { margin-left: 0px; margin-right: 100%; }
-  50% { margin-left: 25%; margin-right: 0%; }
-  100% { margin-left: 100%; margin-right: 0; }
-}
-@keyframes running-progress {
-  0% { margin-left: 0px; margin-right: 100%; }
-  50% { margin-left: 25%; margin-right: 0%; }
-  100% { margin-left: 100%; margin-right: 0; }
+#load div {
+  position:absolute;
+  width:20px;
+  height:36px;
+  opacity:0;
+  font-family:Helvetica, Arial, sans-serif;
+  animation:move 2s linear infinite;
+  -o-animation:move 2s linear infinite;
+  -moz-animation:move 2s linear infinite;
+  -webkit-animation:move 2s linear infinite;
+  transform:rotate(180deg);
+  -o-transform:rotate(180deg);
+  -moz-transform:rotate(180deg);
+  -webkit-transform:rotate(180deg);
+  color:#35C4F0;
 }
 
-
-/* Hide scrollbar from page */
-::-webkit-scrollbar {
-    display: none;
+#load div:nth-child(2) {
+  animation-delay:0.2s;
+  -o-animation-delay:0.2s;
+  -moz-animation-delay:0.2s;
+  -webkit-animation-delay:0.2s;
+}
+#load div:nth-child(3) {
+  animation-delay:0.4s;
+  -o-animation-delay:0.4s;
+  -webkit-animation-delay:0.4s;
+  -webkit-animation-delay:0.4s;
+}
+#load div:nth-child(4) {
+  animation-delay:0.6s;
+  -o-animation-delay:0.6s;
+  -moz-animation-delay:0.6s;
+  -webkit-animation-delay:0.6s;
+}
+#load div:nth-child(5) {
+  animation-delay:0.8s;
+  -o-animation-delay:0.8s;
+  -moz-animation-delay:0.8s;
+  -webkit-animation-delay:0.8s;
+}
+#load div:nth-child(6) {
+  animation-delay:1s;
+  -o-animation-delay:1s;
+  -moz-animation-delay:1s;
+  -webkit-animation-delay:1s;
+}
+#load div:nth-child(7) {
+  animation-delay:1.2s;
+  -o-animation-delay:1.2s;
+  -moz-animation-delay:1.2s;
+  -webkit-animation-delay:1.2s;
 }
 
-
-@font-face{
-    font-family: "tapes";
-    src: url("../fonts/tapes.ttf");
-}
-
-
-#bannner{
-text-align: center;
-left: 50%;
-}
-
-#name{
-  text-align: center;
-  position: absolute;
-  top:10%;
-  left: 40%;
-}
-
-#name span{
-  font-family: 'tapes';
-  font-size: 100px;
-  color: #000;
-  /*text-shadow: 2px 2px #000;*/
-}
-#iam{
-  padding-right: 10px;
-}
-
-
-
-
-
-.typed-cursor{
-    opacity: 1;
-    -webkit-animation: blink 0.7s infinite;
-    -moz-animation: blink 0.7s infinite;
-    animation: blink 0.7s infinite;
-}
-@keyframes blink{
-    0% { opacity:1; }
-    50% { opacity:0; }
-    100% { opacity:1; }
-}
-@-webkit-keyframes blink{
-    0% { opacity:1; }
-    50% { opacity:0; }
-    100% { opacity:1; }
-}
-@-moz-keyframes blink{
-    0% { opacity:1; }
-    50% { opacity:0; }
-    100% { opacity:1; }
-}
-
-/* background setup */
-.background {
-    background-repeat:no-repeat;
-    /* custom background-position */
-    background-position:50% 50%;
-    /* ie8- graceful degradation */
-    background-position:50% 50%\9 !important;
-}
-
-/* fullscreen setup */
-html, body {
-    /* give this to all tags from html to .fullscreen */
-    height:100%;
-}
-.fullscreen,
-.content-a {
-    width:100%;
-    height:100%;
-    overflow:hidden;
-}
-.fullscreen.overflow,
-.fullscreen.overflow .content-a {
-    height:auto;
-    min-height:100%;
-}
-
-/* content centering styles */
-.content-a {
-    display:table;
-}
-.content-b {
-  display:table-cell;
-    position:relative;
-  vertical-align:middle;
-  text-align:center;
-}
-
-.not-fullscreen {
-    height:50%;
-}
-.font-bold {
-  padding: 10px;
-  font-weight: 800;
-  font-family: 'Montserrat', sans-serif;
-}
-.font-medium {
-  padding: 50px;
-  font-weight: 500;
-  font-family: 'Montserrat', sans-serif;
-}
-/* responsive text queries */
-@media screen and (max-width: 1366px) {
-  p,.btn,input,div,span,h4 {
-    font-size: 95%;
+@keyframes move {
+  0% {
+    left:0;
+    opacity:0;
   }
-  .heading-big{
-    font-size: 100px;
+  35% {
+    left: 41%; 
+    -moz-transform:rotate(0deg);
+    -webkit-transform:rotate(0deg);
+    -o-transform:rotate(0deg);
+    transform:rotate(0deg);
+    opacity:1;
   }
-  .text-medium{
-    font-size: 24px;
+  65% {
+    left:59%; 
+    -moz-transform:rotate(0deg); 
+    -webkit-transform:rotate(0deg); 
+    -o-transform:rotate(0deg);
+    transform:rotate(0deg); 
+    opacity:1;
+  }
+  100% {
+    left:100%; 
+    -moz-transform:rotate(-180deg); 
+    -webkit-transform:rotate(-180deg); 
+    -o-transform:rotate(-180deg); 
+    transform:rotate(-180deg);
+    opacity:0;
   }
 }
 
-@media screen and (max-width: 1000px) {
-  p,.btn,input,div,span,h4 {
-    font-size: 90%;
+@-moz-keyframes move {
+  0% {
+    left:0; 
+    opacity:0;
   }
-  .heading-big{
-    font-size: 50px;
+  35% {
+    left:41%; 
+    -moz-transform:rotate(0deg); 
+    transform:rotate(0deg);
+    opacity:1;
   }
-  .text-medium{
-    font-size: 18px;
+  65% {
+    left:59%; 
+    -moz-transform:rotate(0deg); 
+    transform:rotate(0deg);
+    opacity:1;
+  }
+  100% {
+    left:100%; 
+    -moz-transform:rotate(-180deg); 
+    transform:rotate(-180deg);
+    opacity:0;
   }
 }
 
-.social-container {
-  width: 400px;
-  margin: 0vh auto;
-  text-align: center;
+@-webkit-keyframes move {
+  0% {
+    left:0; 
+    opacity:0;
+  }
+  35% {
+    left:41%; 
+    -webkit-transform:rotate(0deg); 
+    transform:rotate(0deg); 
+    opacity:1;
+  }
+  65% {
+    left:59%; 
+    -webkit-transform:rotate(0deg); 
+    transform:rotate(0deg); 
+    opacity:1;
+  }
+  100% {
+    left:100%;
+    -webkit-transform:rotate(-180deg); 
+    transform:rotate(-180deg); 
+    opacity:0;
+  }
 }
 
-.social-icons {
-  padding: 0;
-  list-style: none;
-  margin: 1em;
-}
-.social-icons li {
-  display: inline-block;
-  margin: 0.15em;
-  position: relative;
-  font-size: 1.2em;
-}
-.social-icons i {
-  color: #fff;
-  position: absolute;
-  top: 21px;
-  left: 21px;
-  transition: all 265ms ease-out;
-}
-.social-icons a {
-  display: inline-block;
-}
-.social-icons a:before {
-  transform: scale(1);
-  -ms-transform: scale(1);
-  -webkit-transform: scale(1);
-  content: " ";
-  width: 60px;
-  height: 60px;
-  border-radius: 100%;
-  display: block;
-  background: linear-gradient(45deg, #ff003c, #c648c8);
-  transition: all 265ms ease-out;
-}
-.social-icons a:hover:before {
-  transform: scale(0);
-  transition: all 265ms ease-in;
-}
-.social-icons a:hover i {
-  transform: scale(2.2);
-  -ms-transform: scale(2.2);
-  -webkit-transform: scale(2.2);
-  color: #ff003c;
-  background: -webkit-linear-gradient(45deg, #ff003c, #c648c8);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  transition: all 265ms ease-in;
-}
-.social-icons a.social-square:before {
-  background: linear-gradient(45deg, #7b00e0, #ae31d9);
-  border-radius: 10%;
-}
-.social-icons a.social-square:hover:before {
-  transform: rotate(-180deg);
-  -ms-transform: rotate(-180deg);
-  -webkit-transform: scale(-180deg);
-  border-radius: 100%;
-}
-.social-icons a.social-square:hover i {
-  transform: scale(1.6);
-  -ms-transform: scale(1.6);
-  -webkit-transform: scale(1.6);
-  color: #fff;
-  transform: scale(1.6);
-  -webkit-text-fill-color: #fff;
+@-o-keyframes move {
+  0% {
+    left:0; 
+    opacity:0;
+  }
+  35% {
+    left:41%; 
+    -o-transform:rotate(0deg); 
+    transform:rotate(0deg); 
+    opacity:1;
+  }
+  65% {
+    left:59%; 
+    -o-transform:rotate(0deg); 
+    transform:rotate(0deg); 
+    opacity:1;
+  }
+  100% {
+    left:100%; 
+    -o-transform:rotate(-180deg); 
+    transform:rotate(-180deg); 
+    opacity:0;
+  }
 }
