--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,19 +3,12 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<script>
-	$(document).ready(function() {
-	$(".preloader").delay(5000).fadeOut("slow");
-	$('body').delay(350).css({'overflow':'visible'});
-	});
-	</script>
 	<link rel="stylesheet" href="css/bootstrap.min.css">	
 	<link rel="stylesheet" href="css/loader.css">
-{{!-- 	<link rel="stylesheet" href="css/reset.css">
- --}}	<link rel="stylesheet" href="css/navbar.css">
+	<link rel="stylesheet" href="css/main.css">
+	<link rel="stylesheet" href="css/navbar.css">
 	<link rel="stylesheet" href="fonts/font-awesome-4.7.0/css/font-awesome.min.css">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:500,800" rel="stylesheet">
-	<link rel="prefetch" href="images/back2.jpg">
 	<script src="js/modernizr.js"></script>
 	<script src="js/typed.js"></script>
 	<script src="js/jquery-2.1.1.js"></script>
@@ -25,22 +18,31 @@
 <body>
 <!-- Loader with progress line and Loading video -->
 
-<div class="preloader" id="loader">
+<div class="preloader" id="loader" style="z-index:1999999999">
   <div class="progress-line"></div>
-  	<div id="wrap_video">
-      <div id="video_box" style="width:100%;height:100%;z-index:999">
+{{!--   	<div id="wrap_video">
+      <div id="video_box" style="width:100%;height:100%;">
   			<video id="v0" tabindex="0" autoplay>
 		      <source type="video/mp4; codecs=&quot;avc1.42E01E, mp4a.40.2&quot;" src="images/PARTICLE LOGO.mp4"></source>
 		      <p>Sorry, your browser does not support the &lt;video&gt; element.</p>
   			</video>
       </div>
-  	</div>
+  	</div> --}}
+  	<div id="load">
+	  <div>G</div>
+	  <div>N</div>
+	  <div>I</div>
+	  <div>D</div>
+	  <div>A</div>
+	  <div>O</div>
+	  <div>L</div>
+	</div>
   </div>
 </div>
 
-<div class="fullscreen background parallax" style="background-image:url('images/back2.jpg')" data-img-width="1920" data-img-height="1080" data-diff="100">
+<div class="fullscreen background parallax" style="background-image:url('images/back2.jpg');" data-img-width="1366" data-img-height="665" data-diff="100">
 	<div class="content-a">
-		<div id="name">
+		<div id="name" class="font-bold heading-big" style="padding:5px;font-size:50px;color:black">
 			<span id="iam">I'm </span>
 			<span class="element"></span>
 			<span class="typed-cursor"></span>
@@ -81,7 +83,9 @@
 			    </defs>
 			</svg>
 		</div>
+		<div id="arrow" class="text-center"><i class="fa fa-3x fa-angle-double-down"></i></div>
 	</div>
+	
 </div>
 		
 
@@ -107,6 +111,14 @@
 
 </div>
 <script>
+$(document).ready(function() {
+$(".preloader").delay(10).fadeOut("slow");
+});
+$(".next").click(function() {
+   $('html,body').animate({ scrollTop:$(this).parent().next().offset().top}, 'slow');});
+</script>
+<script>
+
   document.addEventListener('DOMContentLoaded', function(){
       Typed.new('.element', {
         strings: ["a developer", "a designer", "Vishnu"],
@@ -219,5 +231,6 @@ if(!$("html").hasClass("touch")){
 
 
 </script>
+
 </body>
 </html>
