--- a/public/css/main.css
+++ b/public/css/main.css
@@ -16,12 +16,18 @@ body{
   position:absolute;
   float:left;
   width: 50%;
+  height: 100%;
 }
 #right{
   position: absolute;
   margin-left:50%;
   width: 50%;
 }
+img {
+    max-width: 100%;
+    max-height: 100%;
+}
+
 /*loader */
 #loader {
   position: fixed;
@@ -29,14 +35,6 @@ body{
   background-color: black;
   width: 100%;
   height: 100%;
-}
-#video_box {
-  position:relative;
-  size: cover;
-}
-video {
-  -webkit-transform: scaleX(1);
-  -moz-transform: scaleX(1);
 }
 
 .progress-line, .progress-line:before {
@@ -72,25 +70,27 @@ video {
     display: none;
 }
 
-
-#bannner{
-text-align: center;
-left: 50%;
-}
-
 #name{
   text-align: center;
+  color: black;
   position: absolute;
-  top:10%;
-  left: 38%
+  top:20%;
+  left: 38%;
+  padding:5px;
+  font-size:50px;
 }
 
 #arrow{
   position: absolute;
   width: 100%;
   bottom: 0px;
+  color: black;
   padding-bottom: 20px;
-  text-shadow: 2px 2px 10px #000;
+  text-shadow: 2px 2px 10px white;
+}
+
+#arrow-icon:hover{
+  color: red;
 }
 
 #iam{
